# game_2

./: .gitignore  CMakeLists.txt  README.md
demo/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  enemy.cpp  enemy.h  main.cpp  player.cpp  player.h  resource_mgr.h  scene_main.cpp  scene_main.h  spawner.cpp  spawner.h  weapon_thunder.cpp  weapon_thunder.h
src/affiliate/: bar.cpp  bar.h  collider.cpp  collider.h  sprite.cpp  sprite.h  sprite_anim.cpp  sprite_anim.h  text_label.cpp  text_label.h
src/comm/: comm_def.h  log_def.h  singleton.h  tool.h
src/core/: actor.cpp  actor.h  game.cpp  game.h  object.cpp  object.h  object_affiliate.cpp  object_affiliate.h  object_screen.cpp  object_screen.h  object_world.cpp  object_world.h  scene.cpp  scene.h
src/raw/: stats.cpp  stats.h  weapon.cpp  weapon.h
src/screen/: hud_stats.cpp  hud_stats.h  hud_text.cpp  hud_text.h  ui_mouse.cpp  ui_mouse.h
src/world/: effect.cpp  effect.h  spell.cpp  spell.h
